cmake_minimum_required(VERSION 3.17)
project(core_banking)
project(study-object-arrays)
project(study-constant-object)
project(study-static-instance-variable)
project(study-copying)
project(study-inheritance)
project(study-object-pointers)
project(study-polymorphidsm)
project(study-typeid)
project(study-abstract-class)
project(study-lambda-expressions)
project(customer-app)
project(study-stl)
project(study-exception)
project(study-grouping)

set(CMAKE_CXX_STANDARD 17)

add_executable(core_banking main.cpp account.cpp account.h study-constant-object.cpp study-static-instance-variable.cpp study-copying.cpp checkingaccount.cpp checkingaccount.h study-inheritance.cpp study-object-pointers.cpp study-polymorphism.cpp study-typeid.cpp study-abstract-class.cpp customer.cpp customer.h study-lambda-expressions.cpp customer-app.cpp study-stl.cpp study-exception.cpp insufficientbalanceexception.cpp insufficientbalanceexception.h study-resource-management.cpp study-grouping.cpp)
add_executable(study-object-arrays account.cpp account.h study-object-arrays.cpp)
add_executable(study-constant-object account.cpp account.h study-constant-object.cpp)
add_executable(study-static-instance-variable account.cpp account.h study-static-instance-variable.cpp)
add_executable(study-copying account.cpp account.h study-copying.cpp)
add_executable(study-inheritance account.cpp account.h checkingaccount.cpp checkingaccount.h  study-inheritance.cpp)
add_executable(study-object-pointers account.cpp account.h checkingaccount.cpp checkingaccount.h  study-object-pointers.cpp)
add_executable(study-polymorphism study-polymorphism.cpp)
add_executable(study-typeid study-typeid.cpp)
add_executable(study-abstract-class study-abstract-class.cpp)
add_executable(study-lambda-expressions study-lambda-expressions.cpp)
add_executable(customer-app account.h account.cpp checkingaccount.h checkingaccount.cpp customer.h customer.cpp insufficientbalanceexception.cpp insufficientbalanceexception.h customer-app.cpp)
add_executable(study-stl account.h account.cpp checkingaccount.h checkingaccount.cpp customer.h customer.cpp study-stl.cpp)
add_executable(study-exception account.h account.cpp checkingaccount.h checkingaccount.cpp customer.h customer.cpp insufficientbalanceexception.h insufficientbalanceexception.cpp study-exception.cpp)
add_executable(study-grouping account.h account.cpp checkingaccount.h checkingaccount.cpp customer.h customer.cpp insufficientbalanceexception.h insufficientbalanceexception.cpp study-grouping.cpp)